[gd_scene load_steps=36 format=3 uid="uid://c8m5dy2w8a44w"]

[ext_resource type="Script" path="res://Scripts/gamescene.gd" id="1_scxi1"]
[ext_resource type="Script" path="res://Scripts/Camera/CameraController.gd" id="2_3irfh"]
[ext_resource type="Script" path="res://Scripts/Sling/Sling.gd" id="2_jejid"]
[ext_resource type="Script" path="res://Scripts/Camera/CameraBounds.gd" id="3_2i1fh"]
[ext_resource type="PackedScene" uid="uid://bngunx6u5dfq7" path="res://scenes/BubbleSelectMenu_Button.tscn" id="5_2nx2p"]
[ext_resource type="Script" path="res://Scripts/Sling/TrajectoryPreview.gd" id="5_6swga"]
[ext_resource type="PackedScene" uid="uid://bkohxp01r1a8b" path="res://scenes/bubble.tscn" id="5_icqf6"]
[ext_resource type="Script" path="res://Scripts/Sling/PickupRadius.gd" id="5_vwg2f"]
[ext_resource type="Script" path="res://Scripts/Sling/NewtonTrajectoryPreview.gd" id="6_aqxdd"]
[ext_resource type="Script" path="res://Scripts/Sling/VectorTrajectoryPreview.gd" id="6_b45vb"]
[ext_resource type="Material" uid="uid://jiup2jy3aui2" path="res://Art/Sling/vector_shader_material.tres" id="6_nhfxi"]
[ext_resource type="PackedScene" uid="uid://b4qefpqvoj4sx" path="res://scenes/bubble_explosive.tscn" id="6_wr5rn"]
[ext_resource type="PackedScene" uid="uid://cko1bo128vv83" path="res://scenes/bubble_paint_new.tscn" id="7_nrvhg"]
[ext_resource type="Material" uid="uid://xohviejfgi4f" path="res://Art/Sling/newton_shader_material.tres" id="7_v80i2"]
[ext_resource type="Texture2D" uid="uid://dafardwowxnka" path="res://Art/Sling/CartoonDottedLine.svg" id="8_il03c"]
[ext_resource type="PackedScene" uid="uid://c5lcvkvdrdlvy" path="res://scenes/bubble_metal.tscn" id="8_pkkx7"]
[ext_resource type="Texture2D" uid="uid://cq2oavcga4l3i" path="res://Art/Sling/Line2D_SmoothEdgeTexture.png" id="11_848u5"]
[ext_resource type="Script" path="res://Scripts/Sling/GhostTrajectoryPreview.gd" id="11_o4i07"]
[ext_resource type="Script" path="res://addons/radialcontainer_plugin/RadialContainer.gd" id="14_rlae7"]
[ext_resource type="Texture2D" uid="uid://cidpr1r1yncti" path="res://Art/Bubble/[Temp]SpecialBubbles.svg" id="20_ea2a7"]
[ext_resource type="Script" path="res://Scripts/Sling/UI/PrecisionShot_Button.gd" id="21_jg6jn"]
[ext_resource type="Texture2D" uid="uid://c7ib2slaua6yj" path="res://Art/Bubble/radialGradient.svg" id="22_84js7"]
[ext_resource type="Script" path="res://Scripts/Sling/UI/BasicConsumable_Button.gd" id="22_250y0"]
[ext_resource type="Texture2D" uid="uid://cmgpiua27cw6f" path="res://Art/Bubble/[Temp]PaintBubbles.svg" id="23_ydgk4"]
[ext_resource type="Script" path="res://Scripts/Sling/UI/Paint_Button.gd" id="24_hn7nd"]

[sub_resource type="Curve" id="Curve_j361q"]
_data = [Vector2(0, 0), 0.0, 2.425, 0, 0, Vector2(0.1, 0.4), 1.75882, 0.666667, 0, 0, Vector2(1, 1), 0.666667, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_nb6el"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_4jdw3"]
bake_resolution = 1000
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_ej865"]
radius = 182.552

[sub_resource type="AtlasTexture" id="AtlasTexture_4b013"]
atlas = ExtResource("20_ea2a7")
region = Rect2(0, 0, 102.4, 102.4)

[sub_resource type="AtlasTexture" id="AtlasTexture_npc1t"]
atlas = ExtResource("20_ea2a7")
region = Rect2(102.4, 0, 102.4, 102.4)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5k66"]
atlas = ExtResource("23_ydgk4")
region = Rect2(0, 0, 102.4, 102.4)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp26e"]
atlas = ExtResource("20_ea2a7")
region = Rect2(204.8, 0, 102.4, 102.4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_swuy3"]
size = Vector2(6295.88, 207)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kkwav"]
size = Vector2(250, 6305)

[node name="Gamescene" type="Node2D"]
script = ExtResource("1_scxi1")
cell_size = Vector2(106, 116)

[node name="CameraSystem" type="Node" parent="."]

[node name="Camera2D" type="Camera2D" parent="CameraSystem"]
position = Vector2(0, 28)
zoom = Vector2(0.375, 0.375)
limit_left = -1823
limit_top = -1838
limit_right = 4143
limit_bottom = 941
script = ExtResource("2_3irfh")

[node name="CameraBounds" type="ReferenceRect" parent="CameraSystem"]
offset_left = -1823.0
offset_top = -1838.0
offset_right = 4143.0
offset_bottom = 941.0
mouse_filter = 2
border_color = Color(0, 1, 0, 1)
border_width = 10.0
script = ExtResource("3_2i1fh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ButtonContainer" type="GridContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_top = 0.133
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.239998
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
columns = 3

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.132716
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
metadata/_edit_use_anchors_ = true

[node name="BubbleContainer" type="Node2D" parent="."]

[node name="DestroyContainer" type="Node2D" parent="."]

[node name="Sling" type="Node2D" parent="."]
position = Vector2(-1200, 610)
script = ExtResource("2_jejid")
bubble_prefabs = Array[PackedScene]([ExtResource("5_icqf6"), ExtResource("6_wr5rn"), ExtResource("7_nrvhg"), ExtResource("8_pkkx7")])
shoot_strength = 7.5
min_drag = 20.0
max_drag = 300.0
drag_curve = SubResource("Curve_j361q")
button_prefab = ExtResource("5_2nx2p")
infinite_consumables = true

[node name="TrajectoryPreview" type="Node2D" parent="Sling"]
script = ExtResource("5_6swga")

[node name="Vector" type="Line2D" parent="Sling/TrajectoryPreview"]
material = ExtResource("6_nhfxi")
points = PackedVector2Array(0, 0, 0, 0)
width = 100.0
width_curve = SubResource("Curve_nb6el")
texture = ExtResource("11_848u5")
texture_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true
script = ExtResource("6_b45vb")
min_width = 40
origin_offset = 15.0

[node name="Newton" type="Line2D" parent="Sling/TrajectoryPreview"]
texture_repeat = 2
material = ExtResource("7_v80i2")
width = 60.0
texture = ExtResource("8_il03c")
texture_mode = 1
joint_mode = 2
end_cap_mode = 2
script = ExtResource("6_aqxdd")
match_bubble_color = true
trajectory_points_amount = 500
max_trajectory_range = 1000.0

[node name="Ghost" type="Line2D" parent="Sling/TrajectoryPreview"]
modulate = Color(0, 0, 0, 0.231373)
texture_filter = 5
points = PackedVector2Array(0, 0, 0, 0)
width_curve = SubResource("Curve_4jdw3")
texture = ExtResource("11_848u5")
texture_mode = 2
end_cap_mode = 2
antialiased = true
script = ExtResource("11_o4i07")
min_width = 20
max_width = 40
origin_offset = 100.0
cap_offset = 30.0

[node name="PickupRadius" type="Area2D" parent="Sling"]
collision_layer = 4
collision_mask = 0
collision_priority = 2.0
script = ExtResource("5_vwg2f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sling/PickupRadius"]
visible = false
scale = Vector2(0.4, 0.4)
shape = SubResource("CircleShape2D_ej865")

[node name="ColorSelectMenu" type="Control" parent="Sling"]
layout_mode = 3
anchors_preset = 0
mouse_force_pass_scroll_events = false
script = ExtResource("14_rlae7")
anim_control = true
max_radius = 200.0
min_radius = 100.0
split_angle = 45.0
child_size = Vector2(102, 102)

[node name="ConsumableMenu" type="Control" parent="Sling"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("14_rlae7")
open_delay = 0.2
max_radius = 300.0
min_radius = 220.0
split_angle = 118.0
child_size = Vector2(100, 100)

[node name="Precision Shot" type="TextureButton" parent="Sling/ConsumableMenu"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -258.597
offset_top = -248.972
offset_right = -158.597
offset_bottom = -148.972
grow_horizontal = 2
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_4b013")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("21_jg6jn")

[node name="Amount" type="Label" parent="Sling/ConsumableMenu/Precision Shot"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
horizontal_alignment = 2

[node name="Highlight" type="Sprite2D" parent="Sling/ConsumableMenu/Precision Shot"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 0.941176, 0.243137, 1)
z_index = -1
position = Vector2(50, 50)
scale = Vector2(0.3, 0.3)
texture = ExtResource("22_84js7")

[node name="Explosive" type="TextureButton" parent="Sling/ConsumableMenu"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -119.482
offset_top = -300.544
offset_right = -19.482
offset_bottom = -200.544
texture_normal = SubResource("AtlasTexture_npc1t")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("22_250y0")

[node name="Amount" type="Label" parent="Sling/ConsumableMenu/Explosive"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
horizontal_alignment = 2

[node name="Paint" type="TextureButton" parent="Sling/ConsumableMenu"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 19.482
offset_top = -300.544
offset_right = 119.482
offset_bottom = -200.544
texture_normal = SubResource("AtlasTexture_g5k66")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("24_hn7nd")

[node name="Amount" type="Label" parent="Sling/ConsumableMenu/Paint"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
horizontal_alignment = 2

[node name="Highlight" type="Sprite2D" parent="Sling/ConsumableMenu/Paint"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 0.941176, 0.243137, 1)
z_index = -1
position = Vector2(50, 50)
scale = Vector2(0.3, 0.3)
texture = ExtResource("22_84js7")

[node name="Bouncy" type="TextureButton" parent="Sling/ConsumableMenu"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 138.597
offset_top = -228.972
offset_right = 238.597
offset_bottom = -128.972
texture_normal = SubResource("AtlasTexture_hp26e")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("22_250y0")

[node name="Amount" type="Label" parent="Sling/ConsumableMenu/Bouncy"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
horizontal_alignment = 2

[node name="DeadzoneContainer" type="Node2D" parent="."]

[node name="DeadZone" type="Area2D" parent="DeadzoneContainer"]
collision_layer = 2
collision_mask = 9
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadzoneContainer/DeadZone"]
position = Vector2(1032.06, 1054)
shape = SubResource("RectangleShape2D_swuy3")

[node name="DeadZone2" type="Area2D" parent="DeadzoneContainer"]
collision_layer = 2
collision_mask = 9
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadzoneContainer/DeadZone2"]
position = Vector2(4273, -1649.5)
shape = SubResource("RectangleShape2D_kkwav")

[connection signal="value_changed" from="CameraSystem/CameraBounds" to="CameraSystem/Camera2D" method="_on_camera_bounds_value_changed"]
[connection signal="input_event" from="Sling/PickupRadius" to="Sling/PickupRadius" method="_on_input_event"]
[connection signal="close_other_menu" from="Sling/ColorSelectMenu" to="Sling/ConsumableMenu/Paint" method="_on_color_select_menu_close_other_menu"]
[connection signal="color_picked" from="Sling/ColorSelectMenu" to="Sling" method="_on_color_select_menu_color_picked"]
[connection signal="opened" from="Sling/ColorSelectMenu" to="Sling" method="_on_color_select_menu_opened"]
[connection signal="pressed" from="Sling/ConsumableMenu/Precision Shot" to="Sling/ConsumableMenu/Precision Shot" method="_on_pressed"]
[connection signal="set_aim_mode" from="Sling/ConsumableMenu/Precision Shot" to="Sling" method="_on_precision_shot_set_aim_mode"]
[connection signal="on_selected" from="Sling/ConsumableMenu/Explosive" to="Sling" method="_on_explosive_on_selected"]
[connection signal="pressed" from="Sling/ConsumableMenu/Explosive" to="Sling/ConsumableMenu/Explosive" method="_on_pressed"]
[connection signal="colorMenu_changeIcon" from="Sling/ConsumableMenu/Paint" to="Sling" method="_on_paint_color_menu_change_icon"]
[connection signal="pressed" from="Sling/ConsumableMenu/Paint" to="Sling/ConsumableMenu/Paint" method="_on_pressed"]
[connection signal="on_selected" from="Sling/ConsumableMenu/Bouncy" to="Sling" method="_on_bouncy_on_selected"]
[connection signal="pressed" from="Sling/ConsumableMenu/Bouncy" to="Sling/ConsumableMenu/Bouncy" method="_on_pressed"]
[connection signal="body_entered" from="DeadzoneContainer/DeadZone" to="Sling" method="_on_dead_zone"]
[connection signal="body_entered" from="DeadzoneContainer/DeadZone2" to="Sling" method="_on_dead_zone"]
